feat: coplated category frame

--- a/home_page.html
+++ b/home_page.html
@@ -180,6 +180,52 @@
           </div>
         </div>
       </div>
+      <div class="shop_category_frame">
+        <div class="container">
+          <div class="catagory_top">
+            <span>Shop by Category</span>
+            <a>View All Categories</a>
+          </div>
+          <div class="catagory_wrapper">
+            <div class="category_box">
+              <div class="catogory_image_box">
+                <img src="public/images/category/tv.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="catogory_image_box">
+                <img src="public/images/category/computer.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="catogory_image_box">
+                <img src="public/images/category/smart.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="catogory_image_box">
+                <img src="public/images/category/headphone.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="catogory_image_box">
+                <img src="public/images/category/tv.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="catogory_image_box">
+                <img src="public/images/category/phone.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
