--- a/home_page.html
+++ b/home_page.html
@@ -226,6 +226,175 @@
           </div>
         </div>
       </div>
+      <div class="selling_prodact_frame">
+        <div class="container">
+          <div class="catagory_top">
+            <span>Top Selling Products</span>
+            <a>View all</a>
+          </div>
+          <div class="prodact_wrapper">
+            <div class="next_prev_box">
+              <img src="public/images/icons/next.svg" alt="" />
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url('public/images/products/watch.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box"><button>ADD to Cart</button></div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_tite">Samsung</span>
+                  <a href=""
+                    ><p class="product_descrption">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url('public/images/products/phone.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box"><button>ADD to Cart</button></div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_tite">Samsung</span>
+                  <a href=""
+                    ><p class="product_descrption">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url('public/images/products/iRobot.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box"><button>ADD to Cart</button></div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_tite">Samsung</span>
+                  <a href=""
+                    ><p class="product_descrption">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url('public/images/products/dyson.png');
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box"><button>ADD to Cart</button></div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_tite">Samsung</span>
+                  <a href=""
+                    ><p class="product_descrption">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <img src="public/images/icons/review.svg" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>$32.50</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="next_prev_box" style="transform: scaleX(-1)">
+              <img src="public/images/icons/next.svg" alt="" />
+            </div>
+          </div>
+          <div class="prodact_pagionation_box">
+            <div class="finishing_of_page">
+              <img src="public/images/icons/arrow-prev_next.svg" alt="" />
+            </div>
+            <span>.</span>
+            <span>.</span>
+            <div class="border_span">.</div>
+            <span>.</span>
+            <span>.</span>
+            <div class="finishing_of_page" style="transform: scaleX(-1)">
+              <img src="public/images/icons/arrow-prev_next.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
