feat:refactor top selling prodact view

--- a/home_page.html
+++ b/home_page.html
@@ -380,19 +380,33 @@
               <img src="public/images/icons/next.svg" alt="" />
             </div>
           </div>
-          <div class="prodact_pagionation_box">
-            <div class="finishing_of_page">
+          <div class="pagionation_box">
+            <div class="pagination_main">
               <img src="public/images/icons/arrow-prev_next.svg" alt="" />
-            </div>
-            <span>.</span>
-            <span>.</span>
-            <div class="border_span">.</div>
-            <span>.</span>
-            <span>.</span>
-            <div class="finishing_of_page" style="transform: scaleX(-1)">
-              <img src="public/images/icons/arrow-prev_next.svg" alt="" />
-            </div>
-          </div>
+              <div class="pagination_dot">
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot active">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+                <div class="dot">
+                  <div></div>
+                </div>
+              </div>
+              <img src="public/images/icons/arrow-prev_next.svg" alt="" style="transform: scaleX(-1);"/>
         </div>
       </div>
     </div>
