feat:complated adv section

--- a/home_page.html
+++ b/home_page.html
@@ -409,6 +409,7 @@
               <img src="public/images/icons/arrow-prev_next.svg" alt="" style="transform: scaleX(-1);"/>
         </div>
       </div>
+      <div class="adv_frame">Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial</div>
     </div>
   </body>
 </html>
