feat: space product frame

--- a/home_page.html
+++ b/home_page.html
@@ -409,7 +409,55 @@
               <img src="public/images/icons/arrow-prev_next.svg" alt="" style="transform: scaleX(-1);"/>
         </div>
       </div>
-      <div class="adv_frame">Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial</div>
+      <div class="adv_frame">Members get free shipping* with no order minimum!*Restrictions 
+        apply.Try free 30-day trial</div>
+        <!--  -->
+        <div class="space_product_frame"><div class="container">
+          <div class="catagory_top">
+            <span>headphones</span>
+            <a>View all</a>
+          </div>
+          <div class="space_product_wrapper">
+            <div class="big_product_wrapper">
+              <div class="big_product_content">
+                <span>Now in moon gray</span>
+                <p>Beats
+                  Studio Buds</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <img src="public/images/products/headphone_big.png" alt="">
+            </div>
+            <div class="small_product_wrapper">
+              <div class="small_prodcut_box">
+                <div class="small_product_box_content">
+                  <p>Over-Ear</p>
+                  <a href="">29 items</a>
+                </div>
+                <img src="public/images/products/sony_headphone.png" alt="">
+              </div>
+              <div class="small_prodcut_box">
+                <div class="small_product_box_content">
+                  <p>On-Ear</p>
+                  <a href="">29 items</a>
+                </div>
+                <img src="public/images/products/on-ear.png" alt="">
+              </div>
+              <div class="small_prodcut_box">
+                <div class="small_product_box_content">
+                  <p>Sports & Fitness</p>
+                  <a href="">29 items</a>
+                </div>
+                <img src="public/images/products/fitness_headphone.png" alt="" class="fitness_headphone">
+              </div>
+              <div class="small_prodcut_box">
+                <div class="small_product_box_content">
+                  <p>Bluetooth Headphones</p>
+                  <a href="">29 items</a>
+                </div>
+                <img src="public/images/products/bluetooth_headphones.png" alt="" class="bluetooth_headphones">
+              </div>
+            </div>
     </div>
   </body>
 </html>
