feat:complated home page

--- a/home_page.html
+++ b/home_page.html
@@ -12,13 +12,13 @@
     />
     <link rel="stylesheet" href="public/css/command.css" />
     <link rel="stylesheet" href="public/css/home.css" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
   </head>
   <body>
     <div class="navbar_frame">
@@ -640,6 +640,242 @@
                   <img src="public/images/icons/arrow-prev_next.svg" alt="" style="transform: scaleX(-1);"/>
             </div>
           </div>
+            </div>
+          </div>
+          <div class="event_frame">
+            <div class="container">
+              <div class="evevt_boxs">
+                <div class="evevt_left_content_box">
+                  <strong class="top_deal_title_title">Top Deals Of The Day</strong>
+                  <div class="timer_wrapper">
+                    <div class="schedule_wrapper">
+                    <p>178</p>
+                    <span>days</span>          
+                  </div>
+                  <div class="schedule_wrapper">
+                    <p>23</p>
+                    <span>hours</span>          
+                  </div>
+                  <div class="schedule_wrapper">
+                    <p>14</p>
+                    <span>minutes</span>          
+                  </div>
+                  <div class="schedule_wrapper">
+                    <p>39</p>
+                    <span>seconds</span>          
+                  </div>
+                </div>
+                  <a href="">shop now</a>
+                </div>
+                
+                <div class="event_right_product_box">
+                  <div class="next_prev_box">
+                    <img src="public/images/icons/next.svg" alt="" />
+                  </div>
+                  <div class="product_img_content_box">
+                    <div class="img_box">
+                    </div>
+                    <div class="product_content_box">
+                      <span class="product_tite">Samsung</span>
+                      <a href=""
+                        ><p class="product_descrption">
+                          Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                        </p>
+                      </a>
+                      <div class="review_box">
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <span>3,014 reviews</span>
+                      </div>
+                      <div class="price_box">
+                        <strong>$32.50</strong>
+                        <span>$45</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="product_img_content_box">
+                    <div class="img_box">
+                    </div>
+                    <div class="product_content_box">
+                      <span class="product_tite">Samsung</span>
+                      <a href=""
+                        ><p class="product_descrption">
+                          Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                        </p>
+                      </a>
+                      <div class="review_box">
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <span>3,014 reviews</span>
+                      </div>
+                      <div class="price_box">
+                        <strong>$32.50</strong>
+                        <span>$45</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="product_img_content_box">
+                    <div class="img_box">
+                    </div>
+                    <div class="product_content_box">
+                      <span class="product_tite">Samsung</span>
+                      <a href=""
+                        ><p class="product_descrption">
+                          Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                        </p>
+                      </a>
+                      <div class="review_box">
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <span>3,014 reviews</span>
+                      </div>
+                      <div class="price_box">
+                        <strong>$32.50</strong>
+                        <span>$45</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="product_img_content_box">
+                    <div class="img_box">
+                    </div>
+                    <div class="product_content_box">
+                      <span class="product_tite">Samsung</span>
+                      <a href=""
+                        ><p class="product_descrption">
+                          Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                        </p>
+                      </a>
+                      <div class="review_box">
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <img src="public/images/icons/review.svg" alt="" />
+                        <span>3,014 reviews</span>
+                      </div>
+                      <div class="price_box">
+                        <strong>$32.50</strong>
+                        <span>$45</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="_prev_box" style="transform: scaleX(-1);margin-top: 65px; margin-right: 20px;">
+                    <img src="public/images/icons/next.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer_frame">
+            <div class="container">
+              <div class="footer_top">
+                <div class="footer_contact_box">
+                  <span class="footer_space_title">Contact Us</span>
+                  <div class="footer_contact_main">
+                    <img src="public/images/icons/phone-call.svg" alt="">
+                    <div>
+                      <strong>Monday-Friday: 08am-9pm</strong>
+                      <span>+(1) 123 456 7890</span>
+                    </div>
+                  </div>
+                  <div class="footer_contact_main">
+                    <img src="public/images/icons/email.svg" alt="">
+                    <div>
+                      <strong>Need help with your order?</strong>
+                      <span>support@zenmart.com</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="footer_support_box">
+                  <span class="footer_space_title" style="margin-bottom: 10px;">Customer Support</span>
+                  <a href="">Contact Us </a>
+                  <a href=""> Help Centre </a>
+                  <a href=""> Returns & Exchanges</a>
+                  <a href=""> Best Buy Financing</a>
+                  <a href="">  Best Buy Gift Card</a>
+                </div>
+                <div class="footer_support_box">
+                  <span class="footer_space_title" style="margin-bottom: 10px;">Services</span>
+                  <a href="">                  Geek Squad
+                  </a>
+                  <a href=""> In-Home Advisor
+                  </a>
+                  <a href="">Trade-In Program
+                  </a>
+                  <a href=""> Electronics Recycling
+                  </a>
+                  <a href="">Best Buy Health
+                  </a>
+                </div>
+                <div class="footer_media_box">
+                  <div class="footer_media_main">
+                    <span class="footer_space_title" style="margin-bottom: 20px;">Follow Us</span>
+                    <div class="media_box">
+                      <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                      <a href=""><i class="fa-brands fa-twitter"></i></a>
+                      <a href=""><i class="fa-brands fa-instagram"></i></a>
+                      <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                  <div class="footer_media_main">
+                    <span class="footer_space_title">Mobile Apps</span>
+                    <div class="mobile_app_box">
+                      <img src="public/images/icons/apple_icon.png" alt="">
+                      <span>iOS App</span>
+                    </div>
+                    <div class="mobile_app_box">
+                      <img src="public/images/icons/apple_icon.png" alt="">
+                      <span>Android App</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="footer_media_box" style="margin-top: 140px;">
+                  <div class="footer_media_main">
+                    <span class="footer_space_title" style="margin-bottom: 20px;">We accept</span>
+                    <div class="card_box">
+                      <img src="public/images/icons/visa.png" alt="">
+                      <img src="public/images/icons/master_card.png" alt="">
+                      <img src="public/images/icons/apple_pay.png" alt="">
+                      <img src="public/images/icons/dicvover.png" alt="">
+                      <img src="public/images/icons/paypal.png" alt="">
+                      <img src="public/images/icons/amex.png" alt="">
+                    </div>
+                  </div>
+              </div>
+              
+            </div>
+            <div class="foooter_bottom">
+              <div class="footer_main">
+                <div class="footer_bottom_left">
+                  <span>© 2022 Zenmart. All Rights Reserved</span>
+                  <span>Privacy  ·  Terms  ·  Sitemap</span>
+                </div>
+                <div class="footer_bootom_right">
+                 <div class="footer_select_box">
+                  <span>Currency</span>
+                  <select name="" id="">
+                    <option value="" selected>USD</option>
+                    <option value="" selected>USD</option>
+                  </select>
+                 </div>
+                 <div class="footer_select_box">
+                  <span>Language</span>
+                  <select name="" id="">
+                    <option value="" selected>Uzbek</option>
+                    <option value="" selected>English</option>
+                  </select>
+                 </div>
+                </div>
+              </div>
             </div>
           </div>
     </div>
