feat:complated received Page

--- a/orderpage/card.html
+++ b/orderpage/card.html
@@ -87,10 +87,10 @@
                 <a href="../home_page.html">Home</a>
               </div>
               <div class="router_menu">
-                <a href="./all_products.html" class="active">Shop</a>
+                <a href="../product/all_products.html">Shop</a>
               </div>
               <div class="router_menu">
-                <a href="../orderpage/card.html">Orders</a>
+                <a href="../orderpage/card.html" class="active">Orders</a>
               </div>
               <div class="router_menu">
                 <a href="../other/about.html">About</a>
