Feat completed sigin in page

--- a/logingPage/sign_In.html
+++ b/logingPage/sign_In.html
@@ -3,7 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../public/css/command.css" />
+    <link rel="stylesheet" href="../public/css/sign_in.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="sign_page">
+      <div class="sign_frame">
+        <div class="sign_in_boxes">
+          <strong>Sign-In</strong>
+          <div class="input_box">
+            <label for="">Username or email address</label>
+            <input type="text" placeholder="Ali Tufan" />
+          </div>
+          <div class="input_box">
+            <label for="">Username or email address</label>
+            <input type="text" placeholder="Ali Tufan" />
+          </div>
+          <div class="chackbox">
+            <span><input type="checkbox" />Remember me</span>
+            <a href="">Lost your password?</a>
+          </div>
+          <div class="sending_bottom">
+            <a href="">Login</a>
+          </div>
+          <div class="creating_account">
+            <span>Don't have an account?</span>
+            <a href="">Create account</a>
+          </div>
+          <div class="line_div">
+            <div><span>or</span></div>
+          </div>
+          <div class="icon_boxes">
+            <div class="icon_box">
+              <a href="">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </div>
+            <div class="icon_box_2">
+              <a href="">
+                <i class="fa-brands fa-google"></i>
+              </a>
+            </div>
+            <div class="icon_box_3">
+              <a href="">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+            </div>
+            <div class="icon_box_4">
+              <a href="">
+                <i class="fa-brands fa-apple"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
